--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,20 @@
 {
   "name": "frontend",
+  "proxy": "http://127.0.0.1:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "axios": "^0.27.2",
+    "react": "^18.3.0-next-229c86af0-20220616",
+    "react-dom": "^18.3.0-next-229c86af0-20220616",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
